--- a/index.html
+++ b/index.html
@@ -40,11 +40,39 @@
   </header>
   
   <main id="main">
-	  
+	  <div class="container">
+		<div class="row boxes">
 
-	  
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <div class="card-body">
+                <h3 class="card-title"><a href="#">100 Days of Coding!</a></h3>
+                <p>Countdown until my 100 Days of Coding challenge ends!</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="card text-center">
+              <div class="card-body">
+				<h3 class="card-title"><a href="#">Classes End</a></h3>
+                <p>Countdown until the end of the semester</p>
+              </div>
+            </div>
+          </div>
+
+        </div>
+	  </div>
   </main>
   
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
   <br>
   <br>
   
