--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
           <div class="col-lg-6">
             <div class="card text-center">
               <div class="card-body">
-                <h3 class="card-title"><a href="#">100 Days of Coding!</a></h3>
-                <p>Countdown until my 100 Days of Coding challenge ends!</p>
+                <h3 class="card-title"><a href="#">New Years Eve!!</a></h3>
+                <p>Countdown until New Years Eve!!</p>
 				<p class="counter" id="count2"></p>
               </div>
             </div>
@@ -109,7 +109,7 @@
   </script>
   
   <script> 
-    var deadline2 = new Date("February 26, 2020 00:00:00").getTime(); 
+    var deadline2 = new Date("January 1, 2021 00:00:00").getTime(); 
     var x2 = setInterval(function() { 
       var now2 = new Date().getTime(); 
       var t2 = deadline2 - now2; 
